tests/build/cases/widget/mixin_cannot_inherit_widget.stderr
error: mixin-in cannot inherit from full widget
  --> cases/widget/mixin_cannot_inherit_widget.rs:13:21
   |
13 |     inherit!(super::base_wgt); // error
   |                     ^^^^^^^^
